examples/typechecking/given_constraint_error.an

impl print_impl {DoesNotExist a}: Print a with
    print _ = ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// implicit (print_impl: fn {(error) a} -> Print a pure) {(_: (error) a)} : Print a = Print a with
//     (print: fn (ref (error) a) [Ptr Unit] -> Unit pure) = fn (_: ref (error) a) -> ()

// expected stderr:
// examples/typechecking/given_constraint_error.an:2:18
// 2 | impl print_impl {DoesNotExist a}: Print a with	// error: `DoesNotExist` not found in scope
//   |                  ^^^^^^^^^^^^
// 3 |     print _ = ()
// 
// Found 1 error and 0 warnings

